[package]
name = "print_ast"
version = "0.1.0"
authors = ["Kyle Coffey <mariorules24@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jlox = { git = "https://github.com/onContentStop/rusty-jlox", package = "jlox" }
